k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamify-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamify-backend
  template:
    metadata:
      labels:
        app: streamify-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5001"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: streamify-backend
        image: phamkhanhduy/streamify-backend:latest
        imagePullPolicy: Always 
        ports:
        - containerPort: 5001
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
