k8s/frontend-deployment.local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamify-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamify-frontend
  template:
    metadata:
      labels:
        app: streamify-frontend
    spec:
      containers:
      - name: streamify-frontend
        image: streamify-frontend:local # Tag dành cho local
        imagePullPolicy: IfNotPresent  # Chỉ dùng image trên máy
        ports:
        - containerPort: 80
