k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamify-backend-svc
spec:
  selector:
    app: streamify-backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
