k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamify-frontend-svc
spec:
  selector:
    app: streamify-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
